# qna-banco-occidente

./: .env.example  .gitignore  INSTRUCCIONES.txt  Makefile  agent_router.py  api.py  chainlit.md  chainlit_app.py  check_db.py  diagnostico.py  n8n_workflow.json  pyproject.toml  railway.json  requirements.txt  supabase_setup.sql
.chainlit/: config.toml
01_codigos/: 07_chunking.py  agent_router.py  config.py  config.toml  database.py  email_service.py  llm_chains.py  tools.py  transcription.py  tsne_analysis.py  tts_service.py
data/06_corpus/: corpus_adicional_bdo.md  corpus_master.md
data/08_chroma/55fbb90e-1325-4e2f-9abd-e070a35a8418/: index_metadata.pickle
data/08_chroma/b81c5351-9b47-4d78-a47c-17257b8fc946/: index_metadata.pickle
data/08_chroma/c804cd36-75bd-4f1a-9975-4c1c4d124c7a/: index_metadata.pickle
data/08_chroma/f5f00da3-168d-41b5-a8f4-451f4fd09542/: index_metadata.pickle
data/08_chroma/f9eaf332-2a31-476b-868d-9bd476e2eaa0/: index_metadata.pickle
data/memoria/: sesion.json
public/: custom.css  voice.js
