[project]
name = "qna-banco-occidente"
version = "3.0.0"
description = "Asistente Virtual IA — Banco de Occidente | Módulo Final"
requires-python = ">=3.11,<3.14"

dependencies = [
    # ── API REST ──────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # ── LangChain core ────────────────────────────────────
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-google-genai>=2.0.8",
    "langchain-community>=0.3.14",
    "langchain-text-splitters>=0.3.0",
    "langchain-chroma>=0.1.4",
    # ── LangGraph (create_react_agent + PostgresSaver) ────
    "langgraph>=0.2.60",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg[binary,pool]>=3.1",
    # ── Vector store y embeddings ─────────────────────────
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "google-generativeai>=0.8.0",
    # ── YouTube ───────────────────────────────────────────
    "google-api-python-client>=2.120.0",
    "youtube-transcript-api>=0.6.2",
    # ── Base de datos (Supabase) ──────────────────────────
    "supabase>=2.3.0,<2.10.0",
    # ── Interfaz Chainlit ─────────────────────────────────
    "chainlit>=1.3.0",
    # ── Email ─────────────────────────────────────────────
    "resend>=0.7.0",
    # ── Análisis t-SNE ────────────────────────────────────
    "scikit-learn>=1.4.0",
    "plotly>=5.18.0",
    "numpy>=1.26.0",
    # ── Trazabilidad ─────────────────────────────────────
    "langsmith>=0.1.0",
    # ── Web scraping ─────────────────────────────────────
    "requests>=2.32.3",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "selenium>=4.27.1",
    "webdriver-manager>=4.0.2",
    "pypdf>=5.1.0",
    # ── Utilidades ────────────────────────────────────────
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.3.1",
]

[tool.uv]
link-mode = "copy"

[tool.hatch.build.targets.wheel]
packages = ["01_codigos"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
